# Bot_main

./: .gitignore  EXECUTIVE_SUMMARY.md  FINAL_ANALYSIS_REPORT.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  QUICK_REFERENCE.md  README.md  TRAINING_ALGORITHM.md  TRAINING_ALGORITHM_VISUAL.md  TRAINING_CODE_REFERENCE.md  bot_or_not_challenge.md  calc_scores.py  check_scores.py  main.py  predict.py  pyproject.toml  research.py  sanity.sh  train.py  tt.sh  validate_predictions.py
output/: blind-test.fr.31.txt  detections.30.txt  detections.32.txt  detections.en.32.txt  predictions_30.txt  predictions_32.txt  predictions_33.txt  predictions_34.txt  predictions_35.txt
output/models/en/: metrics.json
output/models/fr/: metrics.json
output/overrides/en_calib_sweep_20260210/: 01-en-sweep01-baseline.json
output/overrides/en_deep_sweep_20260210b/: 01-en-deep01-base.json  02-en-deep02-sem22.json  03-en-deep03-sem24.json  04-en-deep04-sem18.json  (+8 more)
src/: convert_datasets.py  feature_selection.py
src/cli/: __init__.py  predict_args.py  research_args.py  train_args.py
src/data/: __init__.py  loader.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  embeddings.py  matrix.py
src/models/: __init__.py  calibration.py  cascade.py  ensemble.py  neural.py  threshold.py
src/prediction/: __init__.py  engine.py
src/training/: __init__.py  candidates.py  config.py  core.py  data.py  holdout.py  identity.py  main.py  oof.py  pipeline.py  resolution.py  selection.py
src/utils/: __init__.py  config.py  io.py  logger.py
(+37 files in other folders)
