[project]
name = "bot-or-not"
version = "0.1.0"
description = "Bot detection system for the Bot or Not Challenge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "xgboost>=3.1.3",
]

[tool.uv.sources]
# CUDA wheels only on Windows/Linux; on macOS use default index (CPU/MPS)
torch = { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
